{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 71,
  "lineage": "1c06d124-8cfe-1e07-0942-d20555d61d87",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hpschd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:821445872109:internet-gateway/igw-04bbc885b4b583d35",
            "id": "igw-04bbc885b4b583d35",
            "owner_id": "821445872109",
            "tags": {
              "Name": "ecs-hpschd-mesostic-api"
            },
            "vpc_id": "vpc-0c51153efc4632058"
          },
          "dependencies": [
            "aws_vpc.hpschd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "hpschd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:821445872109:loadbalancer/app/hpschd-mesostic-api/57da0aae009d4719",
            "arn_suffix": "app/hpschd-mesostic-api/57da0aae009d4719",
            "dns_name": "hpschd-mesostic-api-1116213348.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:821445872109:loadbalancer/app/hpschd-mesostic-api/57da0aae009d4719",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hpschd-mesostic-api",
            "security_groups": [
              "sg-038798fa9b9af0cd5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-032bdd8afae0e9fa0"
              },
              {
                "subnet_id": "subnet-04cf4e0dee5923bb6"
              },
              {
                "subnet_id": "subnet-0a72c078b54d48524"
              },
              {
                "subnet_id": "subnet-0ed16948176d25d8f"
              }
            ],
            "subnets": [
              "subnet-032bdd8afae0e9fa0",
              "subnet-04cf4e0dee5923bb6",
              "subnet-0a72c078b54d48524",
              "subnet-0ed16948176d25d8f"
            ],
            "tags": {
              "Name": "hpschd-mesostic-api"
            },
            "vpc_id": "vpc-0c51153efc4632058",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.hpschd",
            "aws_subnet.hpschd",
            "aws_vpc.hpschd",
            "data.aws_availability_zones.aws-az"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hpschd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:821445872109:listener/app/hpschd-mesostic-api/57da0aae009d4719/0e7d16ab652cdc4a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:821445872109:targetgroup/hpschd-mesostic-api/7e710ff0ede23149",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:821445872109:listener/app/hpschd-mesostic-api/57da0aae009d4719/0e7d16ab652cdc4a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:821445872109:loadbalancer/app/hpschd-mesostic-api/57da0aae009d4719",
            "port": 9999,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.hpschd",
            "aws_lb_target_group.hpschd",
            "aws_security_group.hpschd",
            "aws_subnet.hpschd",
            "aws_vpc.hpschd",
            "data.aws_availability_zones.aws-az"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hpschd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:821445872109:targetgroup/hpschd-mesostic-api/7e710ff0ede23149",
            "arn_suffix": "targetgroup/hpschd-mesostic-api/7e710ff0ede23149",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/ping",
                "port": "9999",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:821445872109:targetgroup/hpschd-mesostic-api/7e710ff0ede23149",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "hpschd-mesostic-api",
            "port": 9999,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c51153efc4632058"
          },
          "dependencies": [
            "aws_vpc.hpschd"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "hpschd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5e775d0a94419b5",
            "original_route_table_id": "rtb-07cc53d946634a1e4",
            "route_table_id": "rtb-05ac1ce82e5060bf2",
            "vpc_id": "vpc-0c51153efc4632058"
          },
          "dependencies": [
            "aws_internet_gateway.hpschd",
            "aws_route_table.hpschd",
            "aws_vpc.hpschd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hpschd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05ac1ce82e5060bf2",
            "owner_id": "821445872109",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04bbc885b4b583d35",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-hpschd-mesostic-api"
            },
            "vpc_id": "vpc-0c51153efc4632058"
          },
          "dependencies": [
            "aws_internet_gateway.hpschd",
            "aws_vpc.hpschd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hpschd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:821445872109:security-group/sg-038798fa9b9af0cd5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038798fa9b9af0cd5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9999,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9999
              }
            ],
            "name": "hpschd-mesostic-api",
            "name_prefix": "",
            "owner_id": "821445872109",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hpschd-mesostic-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c51153efc4632058"
          },
          "dependencies": [
            "aws_vpc.hpschd"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hpschd-task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:821445872109:security-group/sg-080f3952d688d1075",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080f3952d688d1075",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9999,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-038798fa9b9af0cd5"
                ],
                "self": false,
                "to_port": 9999
              }
            ],
            "name": "hpschd-task-mesostic-api",
            "name_prefix": "",
            "owner_id": "821445872109",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hpschd-task-mesostic-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c51153efc4632058"
          },
          "dependencies": [
            "aws_security_group.hpschd",
            "aws_vpc.hpschd"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hpschd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:821445872109:subnet/subnet-0a72c078b54d48524",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a72c078b54d48524",
            "map_public_ip_on_launch": true,
            "owner_id": "821445872109",
            "tags": {
              "Name": "ecs-hpschd-mesostic-api"
            },
            "vpc_id": "vpc-0c51153efc4632058"
          },
          "dependencies": [
            "aws_vpc.hpschd",
            "data.aws_availability_zones.aws-az"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:821445872109:subnet/subnet-0ed16948176d25d8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ed16948176d25d8f",
            "map_public_ip_on_launch": true,
            "owner_id": "821445872109",
            "tags": {
              "Name": "ecs-hpschd-mesostic-api"
            },
            "vpc_id": "vpc-0c51153efc4632058"
          },
          "dependencies": [
            "aws_vpc.hpschd",
            "data.aws_availability_zones.aws-az"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:821445872109:subnet/subnet-04cf4e0dee5923bb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-04cf4e0dee5923bb6",
            "map_public_ip_on_launch": true,
            "owner_id": "821445872109",
            "tags": {
              "Name": "ecs-hpschd-mesostic-api"
            },
            "vpc_id": "vpc-0c51153efc4632058"
          },
          "dependencies": [
            "aws_vpc.hpschd",
            "data.aws_availability_zones.aws-az"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:821445872109:subnet/subnet-032bdd8afae0e9fa0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-032bdd8afae0e9fa0",
            "map_public_ip_on_launch": true,
            "owner_id": "821445872109",
            "tags": {
              "Name": "ecs-hpschd-mesostic-api"
            },
            "vpc_id": "vpc-0c51153efc4632058"
          },
          "dependencies": [
            "aws_vpc.hpschd",
            "data.aws_availability_zones.aws-az"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hpschd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:821445872109:vpc/vpc-0c51153efc4632058",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-089819a241e55d607",
            "default_route_table_id": "rtb-05ac1ce82e5060bf2",
            "default_security_group_id": "sg-0541cf03ada642519",
            "dhcp_options_id": "dopt-237e1c46",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c51153efc4632058",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05ac1ce82e5060bf2",
            "owner_id": "821445872109",
            "tags": {
              "Name": "ecs-hpschd-mesostic-api"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}